@@ -1,5 +1,10 @@
 2011-03-11  Corinna Vinschen  <corinna@vinschen.de>
 
+	* times.cc (hires_ms::timeGetTime_ns): Document entire functionality
+	of timeGetTime in case we need it.
+
+2011-03-11  Corinna Vinschen  <corinna@vinschen.de>
+
 	* autoload.cc (winmm): Remove time functions.  Don't treat
 	unloadable wave functions as fatal.
 	* hires.h (hires_ms::timeGetTime_ns): New private method.
